--- a/nav2_collision_monitor/params/collision_monitor_params.yaml
+++ b/nav2_collision_monitor/params/collision_monitor_params.yaml
@@ -14,7 +14,7 @@ collision_monitor:
     # Footprint could be "polygon" type with dynamically set footprint from footprint_topic
     # or "circle" type with static footprint set by radius. "footprint_topic" parameter
     # to be ignored in circular case.
-    polygons: ["PolygonStop"]
+    polygons: ["FootprintApproach"]
     PolygonStop:
       type: "polygon"
       # points: [0.3, 0.3, 0.3, -0.3, 0.0, -0.3, 0.0, 0.3] # first priority
@@ -23,25 +23,6 @@ collision_monitor:
       visualize: True
       polygon_pub_topic: "polygon_stop"
       # polygon_sub_topic: "sub_topic" # second priority
-      polygon_generator: ["stop", "rotation", "translation"] # third priority
-      stop:
-        points: [0.5, 0.4, 0.5, -0.4, -0.5, -0.4, -0.5, 0.4]
-        linear_min: 0.0
-        linear_max: 0.01
-        theta_min: 0.0
-        theta_max: 0.01
-      rotation:
-        points: [0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5]
-        linear_min: 0.0
-        linear_max: 0.05
-        theta_min: 0.0
-        theta_max: 1.0
-      translation:
-        points: [0.7, 0.4, 0.7, -0.4, -0.5, -0.4, -0.5, 0.4]
-        linear_min: 0.0
-        linear_max: 1.0
-        theta_min: 0.0
-        theta_max: 0.2
     PolygonSlow:
       type: "polygon"
       points: [0.4, 0.4, 0.4, -0.4, -0.4, -0.4, -0.4, 0.4]
@@ -62,11 +43,45 @@ collision_monitor:
     FootprintApproach:
       type: "polygon"
       action_type: "approach"
-      footprint_topic: "/local_costmap/published_footprint"
+      # footprint_topic: "/local_costmap/published_footprint"
       time_before_collision: 2.0
       simulation_time_step: 0.1
       min_points: 6
-      visualize: False
+      visualize: True
+      polygon_pub_topic: "polygon_approach"
+      polygon_generator: ["stop", "rotation", "translation_forward", "translation_backward"] # third priority
+      stop:
+        points: [0.25, 0.25, 0.25, -0.25, -0.25, -0.25, -0.25, 0.25]
+        linear_min: 0.0
+        linear_max: 0.01
+        direction_min: -3.14159
+        direction_max: 3.14159
+        theta_min: 0.0
+        theta_max: 0.01
+      rotation:
+        points: [0.3, 0.3, 0.3, -0.3, -0.3, -0.3, -0.3, 0.3]
+        linear_min: 0.0
+        linear_max: 0.05
+        direction_min: -3.14159
+        direction_max: 3.14159
+        theta_min: -1.0
+        theta_max: 1.0
+      translation_forward:
+        points: [0.35, 0.3, 0.35, -0.3, -0.2, -0.3, -0.2, 0.3]
+        linear_min: 0.0
+        linear_max: 1.0
+        direction_min: -1.5708
+        direction_max: 1.5708
+        theta_min: -1.0
+        theta_max: 1.0
+      translation_backward:
+        points: [0.2, 0.3, 0.2, -0.3, -0.35, -0.3, -0.35, 0.3]
+        linear_min: 0.0
+        linear_max: 1.0
+        direction_min: 1.5708
+        direction_max: -1.5708
+        theta_min: -1.0
+        theta_max: 1.0
     observation_sources: ["scan"]
     scan:
       type: "scan"
