--- a/nav2_collision_monitor/params/collision_monitor_params.yaml
+++ b/nav2_collision_monitor/params/collision_monitor_params.yaml
@@ -49,7 +49,7 @@ collision_monitor:
       min_points: 6
       visualize: True
       polygon_pub_topic: "polygon_approach"
-      polygon_generator: ["stop", "rotation", "translation_forward", "translation_backward"] # third priority
+      polygon_velocity: ["stop", "rotation", "translation_forward", "translation_backward"] # third priority
       stop:
         points: [0.25, 0.25, 0.25, -0.25, -0.25, -0.25, -0.25, 0.25]
         linear_min: 0.0
